--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <title>Website</title>
+    <title>Dark Theme Website</title>
   </head>
   <body>
     <header>
-      <h1>Welcome to web</h1>
+      <h1>Welcome to Dark Theme</h1>
     </header>
 
     <nav>
@@ -20,9 +20,18 @@
       </ul>
     </nav>
 
-    <section>
-      <h2>Main Content</h2>
-      <p>This is a dark-themed webpage.</p>
+    <section class="image-grid">
+      <div class="grid-item">
+        <!-- Replace the placeholder URL with your actual image URL -->
+        <img src="https://via.placeholder.com/400x200" alt="Sample Image 1" />
+        <p>This is a cool image!</p>
+      </div>
+
+      <div class="grid-item">
+        <!-- Replace the placeholder URL with your actual image URL -->
+        <img src="https://via.placeholder.com/400x200" alt="Sample Image 2" />
+        <p>Another awesome image!</p>
+      </div>
     </section>
 
     <footer>
