--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </section>
 
     <footer>
-      <p>&copy; 2024 Dark Theme Web</p>
+      <p>&copy; 2024 meangpu Dark Theme Web</p>
     </footer>
   </body>
 </html>
