--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
     />
     <title>Dark Theme Website</title>
+    <script src="script.js"></script>
   </head>
   <body>
     <header>
