--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
     />
     <title>Dark Theme Website</title>
+
+    <meta property="og:title" content="Dark Theme Website" />
+    <meta property="og:description" content="dark theme" />
+    <meta
+      property="og:image"
+      content="https://meangpu.github.io/assets/logo.05c59aac.webp"
+    />
+
     <script src="script.js"></script>
   </head>
   <body>
